Implement Wizards (Workflows)
Core functionality

allow steps with no checks

Make permalinks optional

Allow for self-attestation of step completion + model cleanup

add helper methods

the missing link

Tidy up example cruft

Better str repr

Create onboarding_sync_filters.py

Add signals.py parts from allianceauth-auth-reports

add admin models

max_length

Update models.py

Reorder models again

reorder models

Update pyproject.toml

Update views.py

Update views.py

Update views.py

Update views.py

making sleepy mistakes now

Update views.py

Update views.py

Update views.py

less len more count

Update models.py

Update models.py

Additional template work

Create final.html

more template fun

Update models.py

More template work

improving views

More model work

fix models

Actually log completion

Step template round 1

Views and typofixing

Update views.py

less cleverness

no len only count

Update views.py

First template, barely there

forgot my self again

weirdly little documentation on using this side of things

don't lose your self

all()s for everyone

Update models.py

Python is not psychic type

Update views.py

typo

less ugly

ugly

Update views.py

Update urls.py

Begin roughing in views

Update base.html

Update step.html

Update step.html

Update step.html

Update step.html

Update step.html

Update step.html

template fudging

Update step.html

Update step.html

Update step.html

Update step.html

Update step.html

Update step.html

Better error handling

Remove unused var

Add faux “id” to views for uri generation

Fix typo

Genericize the app

Update urls.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ requires = [
 ]
 
 [project]
-name = "aa-onboarding-plugin"
-description = "Example Plugin for Alliance Auth (GitHub Version)"
+name = "allianceauth-onboarding"
+description = "Onboarding wizards for Allianceauth"
 readme = "README.md"
 keywords = [
     "allianceauth",
@@ -14,7 +14,7 @@ keywords = [
 ]
 license = { file = "LICENSE" }
 authors = [
-    { name = "Peter Pfeufer", email = "develop@ppfeufer.de" },
+    { name = "corgski", email = "hello@nyetscape.net" },
 ]
 requires-python = ">=3.10"
 classifiers = [
@@ -39,8 +39,8 @@ dynamic = [
 dependencies = [
     "allianceauth>=4.3.1,<5",
 ]
-urls.Changelog = "https://github.com/ppfeufer/aa-onboarding-plugin/blob/master/CHANGELOG.md"
-urls."Issue / Bug Reports" = "https://github.com/ppfeufer/aa-onboarding-plugin/issues"
+urls.Changelog = "https://github.com/gooseflockEO/allianceauth-onboarding/CHANGELOG.md"
+urls."Issue / Bug Reports" = "https://github.com/gooseflockEO/allianceauth-onboarding/issues"
 
 [tool.hatch.version]
 path = "onboarding/__init__.py"
