--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,13 @@ requires = [
 ]
 
 [project]
-name = "allianceauth-onboarding"
-description = "Onboarding wizards for Allianceauth"
+name = "allianceauth-workflows"
+description = "Wizards for Allianceauth"
 readme = "README.md"
 keywords = [
     "allianceauth",
     "onboarding",
+    "workflows",
 ]
 license = { file = "LICENSE" }
 authors = [
@@ -39,13 +40,13 @@ dynamic = [
 dependencies = [
     "allianceauth>=4.3.1,<5",
 ]
-urls.Changelog = "https://github.com/gooseflockEO/allianceauth-onboarding/CHANGELOG.md"
-urls."Issue / Bug Reports" = "https://github.com/gooseflockEO/allianceauth-onboarding/issues"
+urls.Changelog = "https://github.com/gooseflockEO/allianceauth-workflows/blob/main/CHANGELOG.md"
+urls."Issue / Bug Reports" = "https://github.com/gooseflockEO/allianceauth-workflows/issues"
 
 [tool.hatch.version]
-path = "onboarding/__init__.py"
+path = "workflows/__init__.py"
 
 [tool.hatch.build]
 include = [
-    "/onboarding",
+    "/workflows",
 ]
